--- a/templates/verifysignup.html
+++ b/templates/verifysignup.html
@@ -3,6 +3,13 @@
 
 {% block page_content %}
 
+{% for message in get_flashed_messages() %}
+<div class="alert alert-warning">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{ message }}
+</div>
+{% endfor %}
+<p>
 Verify Signup for {{ name }} !!!
-
+</p>
 {% endblock %}
