--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
        <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
+                <li><a href="/simplesignup">Signup</a></li>
             </ul>
        </div>
    </div>
